fix: fixing spacing container

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -57,7 +57,7 @@ body {
 
 @layer components {
   .container {
-    @apply sm:max-w-[768px] md:max-w-[1216px];
+    @apply sm:max-w-[768px] md:max-w-[688px] xl:max-w-[1216px];
   }
 }
 
